...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="RqU-BY-XlI"/>
                                        </constraints>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="klu-dc-0G3">
                                        <rect key="frame" x="0.0" y="210" width="334" height="30"/>
                                        <state key="normal" title="Login"/>
                                    </button>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nfg-EL-UGM">
                                        <rect key="frame" x="0.0" y="240" width="334" height="30"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="HZN-bw-AtW"/>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="uC3-Fv-N5F"/>
                                        </constraints>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iK-oC-lCI">
                                        <rect key="frame" x="0.0" y="320.33333333333331" width="334" height="30"/>
                                        <state key="normal" title="Register"/>
                                    </button>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Firebase Login" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbn-jV-zzH">
                                <rect key="frame" x="108.33333333333333" y="96" width="197.33333333333337" height="35"/>
                                <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="30"/>
...
                            <constraint firstItem="kPz-wB-dcB" firstAttribute="top" secondItem="Wbn-jV-zzH" secondAttribute="bottom" constant="50" id="fQb-KO-QaL"/>
                            <constraint firstItem="Wbn-jV-zzH" firstAttribute="centerX" secondItem="tJu-EV-jb1" secondAttribute="centerX" id="uxB-IP-mYw"/>
                            <constraint firstAttribute="trailingMargin" secondItem="kPz-wB-dcB" secondAttribute="trailing" constant="20" id="wvR-1N-nDW"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="emailField" destination="TEz-eu-Zg5" id="d2V-TS-hY1"/>
                        <outlet property="loginButton" destination="klu-dc-0G3" id="oZK-HS-lhA"/>
                        <outlet property="passwordField" destination="zvL-oO-V3i" id="lE4-F0-l3M"/>
                        <outlet property="registerButton" destination="4iK-oC-lCI" id="U4c-ha-JfE"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="avC-Oj-MRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2137.68115942029" y="152.44565217391306"/>
        </scene>
...
