...

            guard let _ = authResult?.user else {
                self?.displayAlert(title: "Registration", message: "Unable to register user")
                return
            }
            print("yay")
            self?.displayAlert(title: "Registration", message: "Success!", didTapOk: {
                self?.navigationController?.popToRootViewController(animated: true)
            })
        }
    }
}

