...
        super.viewWillAppear(animated)
        self.refreshState()
    }
    
    func refreshState() {
        if let _ = Auth.auth().currentUser {
            self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Logout", style: .plain, target: self, action: #selector(self.didTapLogout))
        } else {
            self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Login", style: .plain, target: self, action: #selector(self.didTapLogin))
        }
        
    }
    
...
